--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,9 @@
-name: myapp
-description: A server app using the shelf package and Docker.
+name: Data_and_Async
+description: Projects about Data Storage and Asyncrony in dart
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
 
 environment:
   sdk: ^3.1.3
 
 dependencies:
-  args: ^2.3.0
-  shelf: ^1.4.0
-  shelf_router: ^1.1.0
-
-dev_dependencies:
-  http: ^0.13.0
-  lints: ^2.0.0
-  test: ^1.21.0
+  intl:  any
